--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-snowfall": "^2.2.0",
     "sass": "^1.82.0"
   },
   "devDependencies": {
