--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-snowfall": "^2.2.0",
     "sass": "^1.82.0"
   },
