--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tsparticles/react": "^3.0.0",
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-snowfall": "^2.2.0",
-    "sass": "^1.82.0"
+    "sass": "^1.82.0",
+    "tsparticles": "^3.7.1"
   },
   "devDependencies": {
     "eslint": "^8",
