--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/shape-image": "^3.7.1",
     "clsx": "^2.1.1",
-    "next": "15.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.4",
     "next-themes": "^0.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-snowfall": "^2.2.0",
     "sass": "^1.82.0",
     "tsparticles": "^3.7.1"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
+    "@eslint/eslintrc": "^3"
   }
 }
