--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "@svgr/webpack": "^8.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/shape-image": "^3.7.1",
+    "@tsparticles/slim": "^3.7.1",
     "clsx": "^2.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "next": "15.1.4",
     "next-themes": "^0.4.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sass": "^1.82.0",
     "tsparticles": "^3.7.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
