--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ebay/nice-modal-react": "^1.2.13",
+    "@emotion/react": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@svgr/webpack": "^8.1.0",
@@ -21,9 +22,12 @@
     "next": "15.1.4",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.15.1",
     "react-modern-drawer": "^1.4.0",
+    "resend": "^4.1.2",
     "sass": "^1.82.0",
     "tsparticles": "^3.7.1",
     "vaul": "^1.1.2",
