--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
