--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_57be4e30320fc80"
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chromatic": "^11.25.2",
     "clsx": "^2.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9",
