--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_57be4e30320fc80"
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
