--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,4 +1,4 @@
-name: "Chromatic Deployment"
+name: 'Chromatic Deployment'
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   chromatic:
-    name: "Publish Storybook to Chromatic"
+    name: 'Publish Storybook to Chromatic'
     runs-on: ubuntu-latest
 
     steps:
