--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic --exit-zero-on-changes"
+    "chromatic": "chromatic --exit-zero-on-changes",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@storybook/addon-controls": "^8.5.3",
@@ -47,7 +48,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-storybook": "^0.11.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.4.3",
     "lucide-react": "^0.474.0",
+    "prettier": "^3.4.2",
     "sass": "^1.84.0",
     "sass-loader": "^16.0.4",
     "storybook": "^8.5.3",
@@ -61,5 +65,11 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --fix",
+    "*.json": "prettier --write",
+    "*.scss": "prettier --write",
+    "*.html": "prettier --write"
   }
 }
