--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,12 +6,30 @@
     { "type": "svg", "name": "subway", "tooltip": "Subway" },
     { "type": "svg", "name": "umbro", "tooltip": "Umbro" },
     { "type": "svg", "name": "superga", "tooltip": "Superga" },
-    { "type": "svg", "name": "dundeeunited", "tooltip": "Dundee United Football Club" },
+    {
+      "type": "svg",
+      "name": "dundeeunited",
+      "tooltip": "Dundee United Football Club"
+    },
     { "type": "svg", "name": "hungrrr", "tooltip": "Hungrrr" },
     { "type": "svg", "name": "snappy", "tooltip": "Snappy Shopper" },
-    { "type": "svg", "name": "macdonalds", "tooltip": "Macdonald Hotels & Resorts" },
+    {
+      "type": "svg",
+      "name": "macdonalds",
+      "tooltip": "Macdonald Hotels & Resorts"
+    },
     { "type": "svg", "name": "campbells", "tooltip": "Campbells Meat" },
-    { "type": "image", "src": "petervardy.png", "alt": "Peter Vardy", "tooltip": "Peter Vardy" },
-    { "type": "image", "src": "carmoney.png", "alt": "CarMoney", "tooltip": "CarMoney" }
+    {
+      "type": "image",
+      "src": "petervardy.png",
+      "alt": "Peter Vardy",
+      "tooltip": "Peter Vardy"
+    },
+    {
+      "type": "image",
+      "src": "carmoney.png",
+      "alt": "CarMoney",
+      "tooltip": "CarMoney"
+    }
   ]
 }
